--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Portifolio": {
+    "Portfolio": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
